# images-upload-cli

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .renovaterc.json  .taplo.toml  .typos.toml  CHANGELOG.md  LICENSE  Makefile  PKGBUILD  README.md  cliff.toml  image-uploader.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: _python-poetry-ci.yml  auto-merge.yml  codeql-analysis.yml  codeql.yml  dependency-review.yml  deps-review.yml  deps.yml  main.yml  python-app.yml  python-codeql.yml
docs/: cli.md
docs/scripts/: gen_ref_nav.py
image_uploader/: image-uploader.py
image_uploader_cli/: image-uploader-cli.py
src/image_upload_cli/: __main__.py  cli.py  upload.py  util.py
src/images_upload_cli/: __init__.py  __main__.py  _cli.py  cli.py  error.py  image.py  logger.py  main.py  typer_test.py  upload.py  util.py
src/py_image_uploader/: __init__.py  __main__.py  __version__.py  cli.py  upload.py  util.py
tests/: conftest.py  fixture.py  img.py  mock.py  test_bm.py  test_cli.py  test_error.py  test_image.py  test_logger.py  test_main.py  test_upload.py  test_util.py
tests/data/: .env.sample
tests/resources/: mock.env  test.env
